--- a/style.css
+++ b/style.css
@@ -13,3 +13,17 @@ button{
     color:white;
     font-family: "Bai Jamjuree", sans-serif;
 }
+.passo{
+    display: none;
+}
+ passo.ativo {
+    display: block;
+ }
+
+ main {
+    text-align-last: center;
+    max-width: 90%;
+ }
+ img {
+    max-width: 90%;
+ }
