--- a/style.css
+++ b/style.css
@@ -1,29 +1,33 @@
 body {
-    background-color: #1d4221;
-    color:white;
-    font-family: "Bai janjuree",sans-serif;
+    background-color: #1D4221;
+    color: white;
+    font-family: "Bai Jamjuree", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 700px;
     margin: 0;
 }
-button{
-    background-color: #64a712;
-    color:white;
+
+button {
+    background-color: #64A712;
+    color: white;
     font-family: "Bai Jamjuree", sans-serif;
 }
-.passo{
+
+.passo {
     display: none;
 }
-.passo.ativo {
-    display: block;
- }
 
- main {
-    text-align-last: center;
+.passo.ativo {
+    display:block;
+}
+
+main {
+    text-align: center;
     max-width: 90%;
- }
- img {
+}
+
+img {
     max-width: 90%;
- }
+}
